--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
+  "name": "dfinance",
+  "version": "0.0.0",
   "description": "",
-  "scripts": {
-    "build": "webpack"
-  },
   "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@dfinity/agent": "^0.7.1",
-    "@types/classnames": "^2.2.11",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.7",
-    "bignumber.js": "^9.0.1",
+    "@babel/core": "7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-react": "7.9.0",
+    "@dfinity/agent": "0.6.20",
+    "babel-loader": "8.1.0",
     "classnames": "^2.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
-    "typescript": "^4.2.4"
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^5.2.0",
-    "file-loader": "^6.2.0",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.31.0",
-    "webpack-cli": "^4.6.0"
+    "css-loader": "^5.2.1",
+    "style-loader": "^2.0.0"
+  },
+  "license": "SEE LICENSE IN LICENSE",
+  "scripts": {
+    "build": "webpack"
   }
 }
