--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "7.9.0",
-    "@dfinity/agent": "0.6.20",
+    "@dfinity/agent": "^0.7.1",
+    "@dfinity/authentication": "^0.7.1",
     "babel-loader": "8.1.0",
     "classnames": "^2.3.1",
     "react": "16.13.1",
@@ -17,6 +18,7 @@
     "webpack-cli": "3.3.12"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
     "css-loader": "^5.2.1",
     "style-loader": "^2.0.0"
   },
