--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@dfinity/agent": "^0.7.1",
     "@dfinity/authentication": "^0.7.1",
     "babel-loader": "8.1.0",
+    "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
