--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-react": "7.9.0",
     "@dfinity/agent": "^0.7.1",
     "@dfinity/authentication": "^0.7.1",
+    "@dfinity/identity": "^0.8.0",
     "babel-loader": "8.1.0",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
