--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "8.1.0",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
+    "lottie-web": "^5.7.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
