--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "7.9.0",
     "@dfinity/agent": "^0.7.1",
+    "@dfinity/auth-client": "^0.8.9",
     "@dfinity/authentication": "^0.7.1",
     "@dfinity/identity": "^0.8.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "babel-loader": "8.1.0",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "lottie-web": "^5.7.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.12"
