--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DSWAP_CANISTER_ID=rrkah-fqaaa-aaaaa-aaaaq-cai
 FRONTEND_CANISTER_ID=r7inp-6aaaa-aaaaa-aaabq-cai
+INTERNET_IDENTITY_CANISTER_URL=http://localhost:8000/?canisterId=rkp4c-7iaaa-aaaaa-aaaca-cai
