--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/crypto-js": "^4.0.1",
     "classnames": "^2.3.1",
+    "crypto-js": "^4.0.0",
     "file-loader": "^6.2.0",
     "lottie-web": "^5.7.8",
     "module-alias": "^2.2.2",
