--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "@types/crypto-js": "^4.0.1",
+    "@types/json-bigint": "^1.0.0",
+    "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "crypto-js": "^4.0.0",
     "file-loader": "^6.2.0",
+    "json-bigint": "^1.0.0",
     "lottie-web": "^5.7.8",
     "module-alias": "^2.2.2",
     "react": "^17.0.2",
