--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+HOST=http://localhost:8000/
 DTOKEN_CANISTER_ID=ryjl3-tyaaa-aaaaa-aaaba-cai
 DSWAP_CANISTER_ID=rrkah-fqaaa-aaaaa-aaaaq-cai
 FRONTEND_CANISTER_ID=r7inp-6aaaa-aaaaa-aaabq-cai
