--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/json-bigint": "^1.0.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
+    "bip39": "^3.0.4",
     "classnames": "^2.3.1",
     "crypto-js": "^4.0.0",
     "file-loader": "^6.2.0",
