--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-HOST=http://localhost:8000/
+HOST=https://boundary.ic0.app/
 DTOKEN_CANISTER_ID=ryjl3-tyaaa-aaaaa-aaaba-cai
 DSWAP_CANISTER_ID=rrkah-fqaaa-aaaaa-aaaaq-cai
 FRONTEND_CANISTER_ID=r7inp-6aaaa-aaaaa-aaabq-cai
-INTERNET_IDENTITY_CANISTER_URL=http://localhost:8000/?canisterId=rkp4c-7iaaa-aaaaa-aaaca-cai
+#INTERNET_IDENTITY_CANISTER_URL=http://localhost:8000/?canisterId=rkp4c-7iaaa-aaaaa-aaaca-cai
+INTERNET_IDENTITY_CANISTER_URL=https://identity.ic0.app
 ROSETTA_BASE_URL=https://rosetta-api.internetcomputer.org/
 LEDGER_CANISTER_ID=ryjl3-tyaaa-aaaaa-aaaba-cai
