--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ DSWAP_CANISTER_ID=rrkah-fqaaa-aaaaa-aaaaq-cai
 FRONTEND_CANISTER_ID=r7inp-6aaaa-aaaaa-aaabq-cai
 INTERNET_IDENTITY_CANISTER_URL=http://localhost:8000/?canisterId=rkp4c-7iaaa-aaaaa-aaaca-cai
 ROSETTA_BASE_URL=https://rosetta-api.internetcomputer.org/
+
 LEDGER_CANISTER_ID=ryjl3-tyaaa-aaaaa-aaaba-cai
+CMINTING_CANISTER_ID=rkp4c-7iaaa-aaaaa-aaaca-cai
