--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@dfinity/auth-client": "^0.8.9",
     "@dfinity/identity": "^0.8.9",
     "@types/classnames": "^2.3.1",
+    "@types/crypto-js": "^4.0.1",
+    "@types/json-bigint": "^1.0.0",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.10",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^8.1.1",
@@ -30,24 +33,28 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "@types/crypto-js": "^4.0.1",
-    "@types/json-bigint": "^1.0.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "bip39": "^3.0.4",
     "classnames": "^2.3.1",
+    "crc-32": "^1.2.0",
     "crypto-js": "^4.0.0",
     "file-loader": "^6.2.0",
+    "js-sha256": "^0.9.0",
     "json-bigint": "^1.0.0",
     "lottie-web": "^5.7.8",
     "module-alias": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.0"
   },
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "build": "webpack"
+  },
+  "browser": {
+    "crypto": false
   }
 }
